--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage" : "https://sidhardha-ch18.github.io/word-guess",
   "name": "one",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
